Fix settings link not showing up on Firefox in mobile layout with NC14+

--- a/css/public/app.css
+++ b/css/public/app.css
@@ -399,6 +399,7 @@
 #app-navigation {
 	padding-bottom: 44px !important; /* style bottom-padding to override NC13 app-without-settings class */
 	z-index: 999;
+	display: block;
 }
 
 #app-navigation .app-navigation-separator {
