--- a/css/style-navigation.css
+++ b/css/style-navigation.css
@@ -7,12 +7,13 @@
  * @author Morris Jobke <hey@morrisjobke.de>
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
- * @copyright Pauli Järvinen 2016, 2017
+ * @copyright Pauli Järvinen 2016 - 2018
  */
 
 #app-navigation {
 	padding-bottom: 44px !important; /* style bottom-padding to override NC13 app-without-settings class */
 	z-index: 999;
+	display: block;
 }
 
 #app-navigation .app-navigation-separator {
